--- a/Acknowledgement.tex
+++ b/Acknowledgement.tex
@@ -1,10 +1,13 @@
 \chapter*{Acknowledgement}
 
-There are many people to thank for the successful completion of this project. Firstly, I would like to thank Dr. Jose Rueda Torres for providing me this opportunity to work on such an interesting topic and guiding me throughout the research. His inputs and suggestions throughout the thesis have been extremely valuable. All the constructive criticisms have contributed to developing me as a good researcher and a good human being. I also would like to thank Prof. Mart van der Meijden for believing in me and for the constant support through several meetings. He has always made me aware of the bigger picture of the work I was doing. I am incredibly thankful to both my supervisors for their support and goodwill during this thesis. 
+There are many people to thank for the successful completion of this thesis. Firstly, I would like to thank Dr. Jose Rueda Torres for providing me this opportunity to work on such an interesting topic and guiding me throughout the research. His inputs and suggestions throughout the thesis have been extremely valuable. All the constructive criticisms through his comments for my report have contributed to developing me as a good researcher and a good human being. I also would like to thank Prof. Mart van der Meijden for believing in me and for the constant support through several meetings. He has always made me aware of the bigger picture of the work I was doing. I am incredibly thankful to both my supervisors for their support and goodwill during this thesis. 
 
 
 % I would like to extend my thanks to my daily supervisor and friend,  for providing me  the kindly consenting to be a part of my defense committee.
-I cannot thank enough my daily supervisor Arcadio Perilla. He has been a constant support and a pillar of strength throughout my thesis. This thesis would not have been possible without his help and contribution. He has been a great teacher to me from the start of my project. His determination and motivation to work have always made an impact on me. I am sure that this learning experience I had from him will be an asset to me. On a lighter note, I will never forget these two things: first, our discussions 
+I cannot thank enough my daily supervisor Arcadio Perilla. He has been a constant support and a pillar of strength throughout my thesis project. I would like to really thank him, for all the discussions, explanations, proposed ideas and transfer of knowledge for the successful completion of this project  
+in the difficult periods, when the project results were not the expected ones He has been a constant support and a pillar of strength throughout my thesis. This thesis would not have been possible without his help and contribution. 
+
+His determination and motivation to work have always made an impact on me. I am sure that this learning experience I had from him will be an asset to me. On a lighter note, I will never forget these two things: first, our discussions 
 
 
 % after coming out of meetings with Suleyman! And his expression whenever I say I have a new idea!
