--- a/Appendix-c.tex
+++ b/Appendix-c.tex
@@ -40,7 +40,7 @@ The RMS current (I\_rms) is calculated at the breaker (CB-1a) and is compared wi
     \label{fig:Idref_control}
 \end{figure}
 
-\section{Steps for operation of the model in Runtime module}
+\section{Steps for operation of the model in Runtime module}\label{steps_energ_appen}
 
 Scaling factor is set to 10 before simulation.
 ID\_ref\_control is also set to 0 before starting the simulation.
@@ -169,7 +169,7 @@ First, the steps \ref{energ_appendix} and \ref{full_gen_appendix} must be perfor
 \end{figure}
 
 \section{Additional graphs}
-\subsection{Disconnection of OWF-2}
+\subsection{Disconnection of OWF-2}\label{disconn_owf2_appen}
 
 \begin{figure}[H]
 %\centering
