--- a/4.Large_scale.tex
+++ b/4.Large_scale.tex
@@ -15,7 +15,7 @@ There are two NovaCor processors available at TU Delft and they are equipped wit
 \end{figure}
 
 
-\section{Defining the layout for the 2 GW Offshore Network}
+\section{Defining the Layout for the 2 GW Offshore Network}
 The initial aspect that needs to be considered for a offshore network is the topology of the network. The popularity of \gls{MMC} due to its improved controllability and superior system performances has led way for the increasing demand for \gls{MMC}-\gls{HVDC} transmission for integration of long distance \gls{OWF}s. For the connection of new \gls{OWF}s in the vicinity of the already existing ones, parallel operation of \gls{MMC}-\gls{HVDC} transmission systems can be expected in the near future with multiple connections to the onshore system. Such type of schemes increase the interest in hybrid systems with the hub-and-spoke principle proposed by ABB \cite{abb_hvdc_2018} and represented in Figure \ref{fig:ABB_Hub_Spoke_3}. The layout in Figure \ref{fig:ABB_Hub_Spoke_3}a) depicts the connection of \gls{OWF}s to a offshore converter station which in turn transfers power to the onshore system through multi-terminal \gls{HVDC} connections. However, in such a layout, the idea of scaling of offshore wind power is limited to the installed capacity of the \gls{MMC} unit. Another layout involves the \gls{OWF}s connected through \gls{AC} links to a back-to-back \gls{HVDC} converter station as shown in Figure \ref{fig:ABB_Hub_Spoke_3}b). Long distance \gls{HVAC} transmission is required in this case, for the transfer of power from \gls{OWF}s to the onshore network and hence contribute to high losses in the network when compared to \gls{HVDC} transmission for larger distances. Figure \ref{fig:ABB_Hub_Spoke_3}c) represents the connection of multiple \gls{OWF}s to the offshore converter station, and power is transferred to the onshore system through multiple \gls{HVDC} links. Such a layout provides contingency in the network by supplying offshore wind power to at least one onshore system if one of the \gls{HVDC} links gets disconnected \cite{lescale2012parallelling}. A stage-wise construction of such a \gls{HVDC} project is easier to be achieved by the developers as well \cite{cigre_B455}.
 
 A specific configuration for a 2 GW offshore network is currently non-existent and this chapter tries to fill in such a research gap. The idea in this chapter is to expand the single \gls{OWF} model network in Figure \ref{fig:WT1_Model_RSCAD} for a 2 GW offshore wind power network. This could be made possible by connecting four such \gls{OWF} models in parallel with each generating 500 MW of power. The reason for choosing four \gls{OWF}s is to have a symmetrical layout and to test the ability of RSCAD to perform simulations of such a configuration. Correspondingly, a 2 GW offshore converter station capacity is required to transfer this generated amount of power to the onshore system. However, currently deployed (state-of-the-art) \gls{MMC}-\gls{HVDC} transmission, has a maximum rated capacity of 1.2 GW \cite{peralta2012detailed}. Hence, with the available technology, two \gls{MMC} offshore stations of 1 GW each will be required for 2 GW power transmission. Taking the aforementioned factors into account, a modified layout of Figure \ref{fig:ABB_Hub_Spoke_3}c) is developed for this work. 
@@ -28,7 +28,7 @@ A specific configuration for a 2 GW offshore network is currently non-existent a
     \label{fig:ABB_Hub_Spoke_3}
 \end{figure}
 
-\subsection{Scaling of single \gls{OWF} model for 2 GW offshore network}\label{scaling_2GW}
+\subsection{Scaling of Single OWF Model for 2 GW Offshore Network}\label{scaling_2GW}
 
 The layout of 2 GW network is built by resorting to scaling of the aggregated \gls{OWF} model in Section \ref{OWF} of Chapter \ref{3}. A modular topology is considered to achieve the capacity of 2 GW. 
 
@@ -200,7 +200,7 @@ These available models are for 145kV \gls{AC} offshore network. Since 66 kV \gls
 \end{comment}
 
 \subsubsection{Modular Multilevel Converters (MMCs)}
-As mentioned in Chapter \ref{1}, it is seen that Modular Multilevel Converters (\gls{MMC}) are the present converter topology preferred for \gls{VSC}-\gls{HVDC} transmission schemes due to their high efficiency and other advantages. They prove to be the state-of-the-art technology for \gls{HVDC} transmission until today. The average \gls{EMT} model of \gls{MMC} in
+As mentioned in Chapter \ref{1}, it is seen that Modular Multilevel Converters (\gls{MMC}s) are the present converter topology preferred for \gls{VSC}-\gls{HVDC} transmission schemes due to their high efficiency and other advantages. They prove to be the state-of-the-art technology for \gls{HVDC} transmission until today. The average \gls{EMT} model of \gls{MMC} in
 RSCAD has the option of modelling the \gls{MMC} using half-bridge submodules or full-bridge submodules \cite{noauthor_mmc_nodate_1}. 
 % The voltage level determines the number of submodules required. The highest levels for \gls{HVDC} projects range from 525 kV to 600 kV. The voltages are bound to increase for the bulk transfer of power in the future projects \cite{alassi2019hvdc}.
 The voltage levels for \gls{HVDC} offshore wind farm projects in Europe range from 300 kV to 640 kV \gls{DC} voltage \cite{ryndzionek_evolution_2020}. Hence, to continue with the latest trend, voltage level of 640 kV \gls{DC} is chosen for this work. Therefore, 320 submodules are required per arm to create a voltage of $\pm$ 320 kV for the positive and negative poles. Both the \gls{MMC}s (\gls{MMC}-1 and \gls{MMC}-2) in the offshore converter stations are modelled for 640 kV \gls{DC}.  
@@ -244,7 +244,7 @@ The connection between the offshore converter station and the onshore converter 
 
 
 
-\section{Control structures}\label{control_structures}
+\section{Control Structures}\label{control_structures}
 This section explains the different control structures implemented and modifications required in the control scheme of converters for operation in the 66 kV \gls{HVAC} network. The \gls{DVC} inspired from \cite{erlich_new_2017} and implemented in Section \ref{DVC_RSCAD} for Type-4 \gls{WG}s is extended for the 2 GW network. There are mainly three control strategies used:
 \begin{itemize}
     \item \gls{DVC} in the \gls{GSC}s of the \gls{WG}s used to represent aggregated \gls{OWF}s 
@@ -255,7 +255,7 @@ This section explains the different control structures implemented and modificat
 \subsection{DVC}
 The control structure explained in Section \ref{DVC_RSCAD} is implemented for all the four \gls{WG}s. Since the same type of model is used for \gls{GSC}s in all four \gls{WG}s, the control loop parameters remain the same. The reactive and active control loop parameters are provided in Appendix \ref{tab:Reactive_pow_para} and \ref{tab:Active_pow_para} respectively.
 
-\subsection{Island mode control}
+\subsection{Island Mode Control}
 It is highly necessary to use a control strategy in any of the \gls{MMC}s which could provide the voltage and frequency reference for the \gls{MMC} bus since it is connected to a weak network (\gls{OWF} network). The reference voltage is created by V/F control mode, which comes under the classification of islanded mode of control for \gls{VSC} \cite{vrana2013cigre}. For this study, \gls{MMC}-1 is operated in the V/F control. A basic control strategy was developed according to the illustration provided in \cite{wachal2014guide} and is shown in Figure \ref{fig:U_F_control}. Since the voltage angle reference ($\theta$), is generated by an independent Voltage Controlled Oscillator (VCO), this control is termed under island mode operation. Such an approach provides the grid forming behaviour for \gls{MMC}-1 and is responsible for providing and absorbing power from the \gls{OWF} network as and when required. The power flow is kept in balance during the steady-state and transient condition with the help of this control \cite{cigre_B455}.  
 
 The V/F control consists of a \gls{PI} controller which has an input that takes in the difference between the measured voltage ($V_{PCC}$) and the reference \gls{PCC} voltage ($V_{PCC\_ref}$) in p.u. and provides the reference d-axis converter voltage ($V_{PCC\_d}$) that is translated to abc frame ($V_{abc\_ref}$) as shown in Figure \ref{fig:U_F_control}. This makes $V_{PCC\_d}$ to be aligned with the grid voltage and the q-axis voltage ($V_{PCC\_q}$) set to zero. The parameters for the \gls{PI} gains used for this control are referred from \cite{vrana2013cigre} and is specified in Appendix \ref{tab:U_F_para}. 
@@ -269,7 +269,7 @@ The V/F control consists of a \gls{PI} controller which has an input that takes 
 \end{figure}
 
 
-\subsection{Non- island mode control}
+\subsection{Non- island Mode Control}
 This mode of operation is based on the conventional current control (grid following) approach, which consists of the outer control loop and the inner control loop. The outer loop consists of the d and q axes loops. The d-axis loop can provide control of \gls{DC} voltage or active power and the q-axis loop can provide control of \gls{AC} voltage or reactive power as depicted in Figure \ref{Control_loop_MMC_Id} and Figure \ref{Control_loop_MMC_Iq} respectively. The outer control loop provides the respective current reference values as inputs for the inner current loops. \gls{MMC}-2 is configured with this control in this work. 
 
 The parameters defined in this section are mathematically derived as given in \cite{saad2015modelisation}. The rotating dq frame provides a simplified control of the three-phase systems. As described in Section \ref{ref_frame_trafo} and mentioned in Figure \ref{fig:DQTransformation}, the currents and voltages in the abc frame are transformed into \gls{dq} frame using Clarke-Park transformation.
