--- a/5.Operation_of_2GW.tex
+++ b/5.Operation_of_2GW.tex
@@ -1,19 +1,19 @@
 \chapter{Analysis of the Dynamic Performance of 2 GW, 66 kV HVAC Offshore Network}\label{5}
 
-Connecting a large scale \gls{OWF} network to an offshore-onshore \gls{HVDC} link has always been a challenge. In this chapter, the operation scheme of the 2 GW offshore network presented in Chapter \ref{4} is simulated and analyzed. Firstly, the initial conditions of the converters are defined and then the stage-wise synchronization and operation of the network is explained. Later, the network is tested for short-term voltage stability and the power flow analysis for severe disturbances such as sudden disconnection of one set of \gls{OWF} and a three-phase line to ground fault in the middle of a \gls{HVAC} cable.
+Connecting a large scale \gls{OWF} network to an offshore-onshore \gls{HVDC} link has always been a challenge. In this chapter, the operation scheme of the 2 GW offshore network presented in Chapter \ref{4} is simulated and analyzed. Firstly, the initial conditions of the converters are defined and then the stage-wise synchronization and operation of the network is explained. Later, the network is tested for short-term voltage stability and the power flow analysis for severe disturbances such as sudden disconnection of one \gls{OWF} and a three-phase line to ground fault in the middle of a \gls{HVAC} cable.
 
 \begin{figure}[H]
 \centering
 %\hspace*{-1.5cm}
     \includegraphics[height = 12cm,width = \textwidth]{Diagrams/Chapter_5/WT4_MMC2_fault.pdf}
-    \caption{6 kV HVAC offshore network connected to 2 x 1 GW HVDC links with offshore MMC stations in RSCAD for two dynamic scenarios- \newline 
+    \caption{66 kV HVAC offshore network connected to 2 x 1 GW HVDC links with offshore MMC stations in RSCAD for two dynamic scenarios- \newline 
     a) Disconnection of OWF-2 (represented by the cross symbol) \newline 
     b) Three-phase line to ground fault in the middle of cable-1 (represented by the fault symbol)}
     \label{fig:WT4_MMC2_Chap5}
 \end{figure}
 
 \section{General settings, Control modes and Pre-set conditions}
-The simulation time step for all the simulations are set to 50 $\mu$s. All plots are simulated for a span of 5 seconds. All the fault or switching events are timed to occur at 0.5 second of the simulation. The three-phase voltage and current graphs for all simulations are plotted for a shorter time span to have a clearer view of the signals during the occurrence of an event. However, the voltage in p.u., active and reactive power graphs are plotted for the whole time span (5 seconds) to analyze the voltage stability and power flow in the network during the simulation. In order to analyze the dynamic and steady state operation of the network, the controllers and set points need to be initialised before charging. They are set as following:
+The simulation time step for all the simulations are set to 50 $\mu$s. All plots are simulated for a span of 5 s. All the fault or switching events are timed to occur at 0.5 s of the simulation. The three-phase voltage and current graphs for all simulations are plotted for a shorter time span (0.4 s to 1.3 s) to have a clearer view of the signals during the occurrence of an event. However, the voltage in p.u., active and reactive power graphs are plotted for the whole time span (5 s) to analyze the voltage stability and power flow in the network during the simulation. In order to analyze the dynamic and steady state operation of the network, the controllers and set points need to be initialised before charging. They are set as following:
 
 \begin{itemize}
     \item \gls{MMC}-1:
@@ -39,8 +39,8 @@ The simulation time step for all the simulations are set to 50 $\mu$s. All plots
     \end{itemize}
 \end{itemize}
 
-\section{Synchronization of the offshore MMC stations}
-The \gls{AC} side of \gls{MMC}s are to be connected to simulate the synchronization scenario. Since the \gls{DC} side is connected to battery sources, the charging of \gls{HVDC} cables is not considered for this study. As mentioned in Section \ref{control_structures} in Chapter \ref{4}, \gls{MMC}-1 works as grid forming (V/F control) and \gls{MMC}-2 works as grid following (active power control). Once the simulation is started, the network is charged until the secondary side of interface transformer, IT-1. The point of measurement of voltages, currents and powers for the \gls{MMC} stations are at the \gls{LV} side of IT-1 for converter station-1 and \gls{LV} side of IT-2a for converter station-2. The voltage at both the buses are the same as the \gls{MMC} bus voltage, as they are connected to the same bus. Firstly, the circuit breaker, CB-5a is closed and the \gls{MMC} bus is charged. The \gls{MMC} bus voltage builds up to rated 66 kV \footnote{(Phase peak voltage = $66\times \frac{\sqrt{2}}{\sqrt{3}} = 53.88 kV)$} voltage on the \gls{AC} as shown in Figure \ref{fig:VABC_MMC_1_2_CB_5a} and in terms of per unit to nearly 0.98 p.u. as shown in Figure \ref{fig:VACP_MMC_1_2_CB_5a}. The currents at the measurement points for both the buses also increase and settles as shown in Figure \ref{fig:IABC_MMC_1_2_CB_5a}. The current takes nearly 0.35 seconds to settle after the closing of the breaker due to selected \gls{PI} parameters of the V/F control in \gls{MMC}-1 and additionally, the charging of transformer IT-2a is also done in this process. 
+\section{Synchronization of the Offshore Converter Stations}
+The \gls{AC} side of \gls{MMC}s are to be connected to simulate the synchronization scenario. Since the \gls{DC} side is connected to battery sources, the charging of \gls{HVDC} cables is not considered for this study. As mentioned in Section \ref{control_structures} in Chapter \ref{4}, \gls{MMC}-1 works as grid forming (V/F control) and \gls{MMC}-2 works as grid following (active power control). Once the simulation is started, the network is charged until the secondary side of interface transformer, IT-1. The point of measurement of voltages, currents and powers for the offshore converter stations are at the \gls{LV} side of IT-1 for converter station-1 and \gls{LV} side of IT-2a for converter station-2. The voltage at both the buses are the same as the \gls{MMC} bus voltage, as they are connected to the same bus. Firstly, the circuit breaker, CB-5a is closed and the \gls{MMC} bus is charged. The \gls{MMC} bus voltage builds up to rated 66 kV \footnote{(Phase peak voltage = $66\times \frac{\sqrt{2}}{\sqrt{3}} = 53.88 kV)$} voltage on the \gls{AC} as shown in Figure \ref{fig:VABC_MMC_1_2_CB_5a} and in terms of per unit to nearly 0.98 p.u. as shown in Figure \ref{fig:VACP_MMC_1_2_CB_5a}. The currents at the measurement points for both the buses also increase and settles as shown in Figure \ref{fig:IABC_MMC_1_2_CB_5a}. The current takes nearly 0.35 seconds to settle after the closing of the breaker due to selected \gls{PI} parameters of the V/F control in \gls{MMC}-1 and additionally, the charging of transformer IT-2a is also done in this process. 
 
 \begin{figure}[H]
 %\centering
@@ -109,7 +109,7 @@ The next step is to close the circuit breaker, CB-6a to connect \gls{MMC}-2 to t
 \label{fig:IABC_MMC_1_2_CB_6a}
 \end{figure}
 
-\section{Energization of the HVAC cables and OWFs}\label{energization_HVAC_Cables}
+\section{Energization of the HVAC Cables and OWFs}\label{energization_HVAC_Cables}
 The energization procedure of the \gls{AC} network followed in this work involves charging of each \gls{HVAC} cable and the corresponding \gls{OWF}. Initially cable-1 is charged and then \gls{OWF}-1 is connected. The same is followed for the other sets of \gls{OWF}s as well. As mentioned in Section \ref{Aggregated_OWF_large_scale} in Chapter \ref{4}, each \gls{OWF} have a maximum capacity of 500 MW that is represented by scaling up (by using the scaling factor function in RSCAD) of a \gls{WG} model of 6 MW rated power. For the energization process, the \gls{OWF}s are connected initially with lesser number of \gls{WG} units (9 $\times$ 6 = 48 MW) of nearly 50 MW power to avoid surge of voltage at \gls{PCC} and to maintain the voltage within limits. Once stability is attained after connecting all the \gls{OWF}s, the scaling in all \gls{OWF}s is incremented. Since power only flows through \gls{MMC}-1 until then, the increment can be until the maximum capacity of \gls{MMC}-1 i.e. 1 GW.
 
 The cable-1 gets energized when the CB-1a circuit breaker, as shown in Figure \ref{fig:WT4_MMC2_Chap5}, is switched on. The voltage at \gls{MMC} common bus is increased and set to a value of nearly 1.05 p.u. as seen in Figure \ref{VACP_MMC_bus_Cab1charg}. The current for cable charging is provided by \gls{MMC}-1 and the active power reference for the \gls{MMC}-2 is not changed in this process. Hence, current flow in \gls{MMC}-1 bus increases for cable-1 charging as shown in Figure \ref{fig:IABC_MMC_1_Cab1charg} and the current flow in \gls{MMC}-2 bus remains unchanged as shown in Figure \ref{fig:IABC_MMC_2_Cab1charg}. The disturbances observed during the switching operation at 0.5 seconds, before the currents stabilize to a particular value at 0.75 seconds, is due to the \gls{PI} parameters chosen for the V/F control in \gls{MMC}-1. Optimizing these parameters through small-signal stability analysis could achieve smoother signals. The current in cable-1 upon CB-1a closing is depicted in Figure \ref{fig:IABC_Cab1_Cab1charg}. 
@@ -180,7 +180,7 @@ After cable-1 has been charged, the breaker at the \gls{OWF}-1 end (CB-1b) is sw
     \label{P_MMC_2_WT1234connect}
 \end{figure}
 
-Once the system gets stabilized, the generation is increased in steps by increasing the number of parallel \gls{WG} units. On doing so, the voltage is ensured to be within limits at all \gls{PCC}s. The power flow to the \gls{MMC}-2 is to be controlled in the next step. This is done by controlling the active power reference of \gls{MMC}-2. For this study, it is modelled such that all \gls{OWF}s have the same scaling of power and hence they all produce the same amount of power at every instant. An step-by-step increment of 50 MW in all \gls{OWF} is done and correspondingly the active power reference for \gls{MMC}-2 is also increased. Finally, the \gls{OWF}s are made to generate 500 MW each and the total of nearly 2 GW power is equally split between \gls{MMC}-1 and \gls{MMC}-2 having nearly 960 MW active power in each as seen from the final steady state plots in Figure \ref{P_MMC_1_2_All_WTconnect}.
+Once the system gets stabilized, the generation is increased in steps by increasing the number of parallel \gls{WG} units. On doing so, the voltage is ensured to be within limits at all \gls{PCC}s. The power flow to the \gls{MMC}-2 is to be controlled in the next step. This is done by controlling the active power reference of \gls{MMC}-2. For this study, it is modelled such that all \gls{OWF}s have the same scaling of power and hence they all produce the same amount of power at every instant. An step-by-step increment of 50 MW in all \gls{OWF} is done and correspondingly the active power reference for \gls{MMC}-2 is also increased. The procedure is detailed in Appendix \ref{steps_energ_appen}. Finally, the \gls{OWF}s are made to generate 500 MW each and the total of nearly 2 GW power is equally split between \gls{MMC}-1 and \gls{MMC}-2. Power losses are expected to occur during the transmission, hence the active power flowing is nearly 960 MW in both in each as seen from the final steady state plots in Figure \ref{P_MMC_1_2_All_WTconnect}.
 
 \begin{figure}[H]
 \centering
@@ -192,11 +192,11 @@ Once the system gets stabilized, the generation is increased in steps by increas
 
 From Figure \ref{fig:VABC_MMC_1_2_CB_5a} to \ref{P_MMC_1_2_All_WTconnect}, it can be said that, by viewing the respective voltages, currents and powers, the synchronization of both \gls{MMC}s and the energization of the offshore \gls{AC} grid is done successfully. The offshore \gls{AC} grid converters and cables now operate at a voltage of 66 kV, the \gls{HVDC} voltage is set to 640 kV and the total active power transmitted is nearly 2 GW in the network. Frequency of the system is stabilized at 50 Hz and the power system is said to be operating in the steady state condition.  
 
-\section{Dynamic performance analysis}
+\section{Dynamic Performance Analysis}
 Fault events and perturbations can occur in the grid and the components in the system must be able to withstand these voltage surges and fault currents for a short duration of time. The performance of the network in terms of short-term (fault occurring for a time span of 6-10 cycles accounting for 120 ms-200 ms) voltage stability and power flow is analyzed. The coordination among different controllers available in the network is studied during severe perturbations in the network as described below.  
 
-\subsection{Disconnection of one OWF}\label{disconnection_one_OWF}
-The first event is a sudden disconnection of one \gls{OWF}. \gls{OWF}-2 is permanently disconnected from the circuit by opening the breaker, CB-2a connected towards the \gls{OWF}-2 cable end at 0.5 seconds. Once the breaker is open, the generation of 500 MW is lost and the power flow is reduced through \gls{MMC}-1 as shown in Figure \ref{P_MMC_1_2_WT2off}. This is due to the fact that \gls{MMC}-1 is the one in grid forming control (provides power balance in the network) and also the active power reference of \gls{MMC}-2 is unchanged. In the post-fault period, the active power flow through \gls{MMC}-2 is seen to be higher than the pre-fault period. The reason for this can be justified from the increase in voltage at the \gls{OWF} side shown in the following section. \gls{MMC}-2 is seen to be operating with the maximum rated capacity of 1 GW in this condition. The decrease in generation in \gls{MMC}-1 can also be viewed from the current flowing in \gls{MMC}-1 as witnessed in Figure \ref{fig:IABC_MMC_1_WT2off} whereas the current remains the same in \gls{MMC}-2 as seen from the current graphs in Figure \ref{fig:IABC_MMC_2_WT2off}.  
+\subsection{Disconnection of One OWF}\label{disconnection_one_OWF}
+The first event is a sudden disconnection of one \gls{OWF}. \gls{OWF}-2 is permanently disconnected from the circuit by opening the breaker, CB-2a connected towards the \gls{OWF}-2 cable end at 0.5 s. Once the breaker is open, the generation of 500 MW is lost and the power flow is reduced through \gls{MMC}-1 as shown in Figure \ref{P_MMC_1_2_WT2off}. This is due to the fact that \gls{MMC}-1 is the one in grid forming control (provides power balance in the network) and also the active power reference of \gls{MMC}-2 is unchanged. In the post-fault period, the active power flow through \gls{MMC}-2 is seen to be higher than the pre-fault period. The reason for this can be justified from the increase in voltage at the \gls{OWF} side shown in the following section. \gls{MMC}-2 is seen to be operating with the maximum rated capacity of 1 GW in this condition. The decrease in generation in \gls{MMC}-1 can also be viewed from the current flowing in \gls{MMC}-1 as witnessed in Figure \ref{fig:IABC_MMC_1_WT2off} whereas the current remains the same in \gls{MMC}-2 as seen from the current graphs in Figure \ref{fig:IABC_MMC_2_WT2off}.  
 
 
 \begin{figure}[H]
@@ -224,7 +224,7 @@ The first event is a sudden disconnection of one \gls{OWF}. \gls{OWF}-2 is perma
 \end{figure}
 
 
-In the \gls{OWF}s side, the voltage at \gls{PCC}-2 goes to beyond bounds and is in the condition as before energizing. This can be observed from the voltage in p.u. graph in Figure \ref{VACP_WT134_WT2off}b). During the disconnection of \gls{OWF}-2, there occurs drop in voltage at \gls{PCC}-1, 3 and 4 as well as seen from the voltage graphs in Figure \ref{VACP_WT134_WT2off}a), c) and d). This happens since they are all connected to a common bus (\gls{MMC} bus). Moreover, in the post-fault period, the voltages at \gls{PCC}-1, 3 and 4 settles to a higher value (nearly 1.08 p.u.) than the pre-fault voltage in order to compensate for the loss of \gls{OWF}-2. But the currents at these \gls{OWF}s remain the same since the scaling factor for each \gls{OWF} is still 83 (83 $\times$ 6 = 498 MW). This can be viewed from the current measured at \gls{PCC}-1 in Figure \ref{IABC_WT1_WT2off}. Similar is the case for \gls{PCC}-3 and \gls{PCC}-4 and the graphs are shown in Appendix. As the voltage increases and the current remains the same, the active power generated from the \gls{OWF}- 1, 3 and 4 increases and therefore the power flowing through \gls{MMC}-2 also increases.
+In the \gls{OWF}s side, the voltage at \gls{PCC}-2 goes to beyond bounds and is in the condition as before energizing. This can be observed from the voltage in p.u. graph in Figure \ref{VACP_WT134_WT2off}b). During the disconnection of \gls{OWF}-2, there occurs drop in voltage at \gls{PCC}-1, 3 and 4 as well as seen from the voltage graphs in Figure \ref{VACP_WT134_WT2off}a), c) and d). This happens since they are all connected to a common bus (\gls{MMC} bus). Moreover, in the post-fault period, the voltages at \gls{PCC}-1, 3 and 4 settles to a higher value (nearly 1.08 p.u.) than the pre-fault voltage in order to compensate for the loss of \gls{OWF}-2. But the currents at these \gls{OWF}s remain the same since the scaling factor for each \gls{OWF} is still 83 (83 $\times$ 6 = 498 MW). This can be viewed from the current measured at \gls{PCC}-1 in Figure \ref{IABC_WT1_WT2off}. Similar is the case for \gls{PCC}-3 and \gls{PCC}-4 and the graphs are shown in Appendix \ref{disconn_owf2_appen}. As the voltage increases and the current remains the same, the active power generated from the \gls{OWF}- 1, 3 and 4 increases and therefore the power flowing through \gls{MMC}-2 also increases.
 
 \begin{figure}[H]
 %\centering
@@ -242,13 +242,13 @@ In the \gls{OWF}s side, the voltage at \gls{PCC}-2 goes to beyond bounds and is 
     \label{IABC_WT1_WT2off}
 \end{figure}
 
-\subsection{Three-phase line to ground fault}
+\subsection{Three-phase Line to Ground Fault}
 
 Before the application of three-phase line to ground fault, a logic to operate the circuit breaker (CB-1a) at the cable-1 end is developed as shown in Figure \ref{fig:Fault_logic}. This logic is inspired from the "Fault Control" model 
 %\footnote{Tutorial >> SAMPLES >> Mainstep >> Fault Control} available in RSCAD. 
 For the fault, the line to ground fault component available in RSCAD library is used \cite{rtds_tech}.
 
-\subsubsection{Circuit Breaker (CB) operation logic}\label{Fault logic and cb}
+\subsubsection{Circuit Breaker (CB) Operation Logic}\label{Fault logic and cb}
 The logic is developed for the operation of the circuit breaker CB-1a in Figure \ref{fig:WT4_MMC2_Chap5} by detecting overcurrent. The signal 'SWD2A' is the signal for operating CB-1a. Initially, the breaker is closed during the energizing process using the switch 'CabMMC$\_$side'. Once the system is fully operational after connecting all the four \gls{OWF}s and achieving 2 GW power in the network, the 'Activ' switch in Figure \ref{fig:Fault_logic} is turned on. This is done to provide the switching operation of CB-1a by comparing the RMS current ($I_{rms}$) and the maximum phase current ($I_{phase\_max}$)\footnote{$I_{phase\_max}$ = 10 \% above $I_{phase}$ = 1.1 $\times$ $I_{phase}$
 
 $I_{phase}$ = $\frac{Apparent \;\; power \;\; in \;\; single-phase}{Line \;\; to \;\; neutral \;\; voltage}$} at CB-1a. The system is still in steady state condition. Once fault is applied, when $I_{rms}$ becomes greater than $I_{phase\_max}$, the SR flip flop detects the change and holds a value of zero for the signal 'SWD2A'. This action causes the breaker CB-1a to open. The delay block before the signal 'SWD2A' provides the time delay for the operation of \gls{CB} after the fault has been detected.
@@ -269,7 +269,7 @@ $I_{phase}$ = $\frac{Apparent \;\; power \;\; in \;\; single-phase}{Line \;\; to
     \label{Circuit_breaker_3phasefault}
 \end{figure}
 
-In order to analyse the short-term voltage stability of the system, a permanent three-phase line to ground fault is applied in the middle of the \gls{OWF}-1 cable. The response of the network is recorded and the plots for voltages, currents, active and reactive powers are depicted from Figure \ref{Circuit_breaker_3phasefault} to Figure \ref{IDQ_WT2_3phaseSC} for the event. During the time of fault, the RMS current exceeds the maximum phase current and the logic developed detects this over current at CB-1a. This leads to the opening of breaker CB-1a according to the logic explained in previous paragraph. The overcurrent is detected at 0.53 s of the simulation from the developed logic and a short delay of nearly 12 ms is provided to open the breaker after the fault has been detected similar to a practical scenario (Figure \ref{Circuit_breaker_3phasefault}). After the breaker has been opened, the \gls{OWF}-1 is isolated from the network and the total power provided to the onshore network is reduced. The total power in the pre-fault period is 2 GW and after the fault the total power is reduced to 1500 MW. Similar to the disconnection of one \gls{OWF} discussed earlier in Section \ref{disconnection_one_OWF}, the power flow is reduced through \gls{MMC}-1 as shown by the blue line in Figure \ref{17_3phaseSC}. It is also worthy to mention that the network is stable by viewing the the stable voltage in the post-fault period in \gls{MMC} bus as shown in Figure \ref{VABC_MMC_1_3phaseSC}.
+In order to analyze the short-term voltage stability of the system, a permanent three-phase line to ground fault is applied in the middle of the \gls{OWF}-1 cable. The response of the network is recorded and the plots for voltages, currents, active and reactive powers are depicted from Figure \ref{Circuit_breaker_3phasefault} to Figure \ref{IDQ_WT1_3phaseSC} for the event. During the time of fault, the RMS current exceeds the maximum phase current and the logic developed detects this over current at CB-1a. This leads to the opening of breaker CB-1a according to the logic explained in previous paragraph. The overcurrent is detected at 0.53 s of the simulation from the developed logic and a short delay of nearly 12 ms is provided to open the breaker after the fault has been detected similar to a practical scenario (Figure \ref{Circuit_breaker_3phasefault}). After the breaker has been opened, the \gls{OWF}-1 is isolated from the network and the total power provided to the onshore network is reduced. The total power in the pre-fault period is 2 GW and after the fault the total power is reduced to 1500 MW. Similar to the disconnection of one \gls{OWF} discussed earlier in Section \ref{disconnection_one_OWF}, the power flow is reduced through \gls{MMC}-1 as shown by the blue line in Figure \ref{17_3phaseSC}. It is also worthy to mention that the network is stable by viewing the the stable voltage in the post-fault period in \gls{MMC} bus as shown in Figure \ref{VABC_MMC_1_3phaseSC}.
 
 
 
@@ -340,7 +340,7 @@ There can be two reasons for such a phenomena to occur. The first is that, after
 \end{figure}
 
 
-The currents from the \gls{OWF}s-2, 3 and 4 are the same in the post-fault region as the pre-fault condition (Figure \ref{IABC_WT2_3phaseSC} for \gls{PCC}-2) since the scaling factor for each \gls{OWF} is still the same. The \gls{DVC} control in these \gls{OWF}s operate during the time of fault and limit the currents by controlling the voltages at their respective \gls{PCC}s. Due to the increase in voltage in the post-fault period at the \gls{PCC}s-2, 3 and 4 as mentioned in the previous paragraph, the active power generated also will be higher from the \gls{OWF}s-2, 3 and 4 and it is also reflected in the increase in active power in \gls{MMC}-2 as shown in Figure \ref{17_3phaseSC}. Another important observation is in the profile of transients in the currents in \gls{PCC}s-2, 3 and 4 following the occurrence of the fault. As shown in Figure \ref{IABC_WT2_3phaseSC} for \gls{PCC}-2, the current is limited from 0.5 to 0.54 s during the time of fault. After the breaker has been operated at 0.542 s, the profile of currents (from 0.55 s to 0.6 s) is similar to that of the \gls{MMC}-2 (Figure \ref{fig:IABC_MMC_2_3phaseSC}). This shows that \gls{MMC}-1 is dominating during the steady-state conditions and \gls{DVC} takes over control during dynamic scenarios.
+The currents from the \gls{OWF}s-2, 3 and 4 are the same in the post-fault region as the pre-fault condition (Figure \ref{IABC_WT2_3phaseSC} for \gls{PCC}-2) since the scaling factor for each \gls{OWF} is still the same. The \gls{DVC} control in these \gls{OWF}s operate during the time of fault and limit the currents by controlling the voltages at their respective \gls{PCC}s. Due to the increase in voltage in the post-fault period at the \gls{PCC}s-2, 3 and 4 as mentioned in the previous paragraph, the active power generated also will be higher from the \gls{OWF}s-2, 3 and 4 and it is also reflected in the increase in active power in \gls{MMC}-2 as shown in Figure \ref{17_3phaseSC}. Another important observation is in the profile of transients in the currents in \gls{PCC}s-2, 3 and 4 following the occurrence of the fault. As shown in Figure \ref{IABC_WT2_3phaseSC} for \gls{PCC}-2, the current is limited from 0.5 to 0.54 s during the time of fault. After the breaker has been operated at 0.542 s, the profile of currents (from 0.55 s to 0.6 s) is similar to that of the \gls{MMC}-2 (Figure \ref{fig:IABC_MMC_2_3phaseSC}). This is due to the re-synchronization to the grid by the \gls{PLL}s in \gls{MMC}-2 control and \gls{DVC} in \gls{WG}-2, 3 and 4. 
 
 \begin{figure}[H]
 %\centering
