--- a/report.tex
+++ b/report.tex
@@ -141,16 +141,16 @@
 %% Include an optional title page.
 \input{title}
 
-\input{Acknowledgement}
+%\input{Acknowledgement}
 \input{Abstract}
 
 \tableofcontents
 
 
 
-%\listoffigures
+\listoffigures
 
-%\listoftables
+\listoftables
 
 \printglossary[title=List of Abbreviations]
 
@@ -160,18 +160,18 @@
 \mainmatter
 
 \input{1.Introduction}
-% \input{2.Scientific_Background}
+ \input{2.Scientific_Background}
  \input{3.Implementation_of_DVC}
-% \input{4.Large_scale}
+ \input{4.Large_scale}
  \input{5.Operation_of_2GW}
 \input{6.Conclusions_and_future_scope}
 
-% \begin{appendices}
-%  \input{Appendix-a}
-%  \input{Appendix-b}
-%  \input{Appendix-c}
-% \input{Appendix-d}
-%  \end{appendices}
+\begin{appendices}
+ \input{Appendix-a}
+ \input{Appendix-b}
+ \input{Appendix-c}
+\input{Appendix-d}
+ \end{appendices}
 \bibliographystyle{ieeetran}
 %% Use letters for the chapter numbers of the appendices.
 
