--- a/2.Scientific_Background.tex
+++ b/2.Scientific_Background.tex
@@ -169,7 +169,7 @@ The switching of the valves has to be configured using a control mechanism to en
 \end{figure}
 
 \subsubsection{Reference frame transformation}\label{ref_frame_trafo}
-\gls{PI} controllers are widely used for the control operation of \gls{VSC}s in power systems. It is therefore relevant to translate from three-phase abc frame to a rotating \gls{dq} frame in order to have a two signal representation of three-phase \gls{AC} signals. Figure \ref{fig:DQTransformation} shows the Clarke-Park transformation used for this purpose. The three-phase measured signals from the node are translated to a stationary reference frame ($\alpha \beta$) using the Clarke transform. It is then translated to a synchronous rotating \gls{dq} frame using the Park transform. The reference signal for control is provided to the corresponding frame, and after the control process is established, it is translated back to the three-phase signals. In the real scenario, during translation to a rotating \gls{dq} frame, the d-axis is made to align with the voltage of the grid and q-axis is aligned to zero. This approach provides control of active power or \gls{DC} voltage using d-axis current component of the converter, while the reactive power or \gls{AC} voltage can be controlled using the q-axis current component of the converter.   
+\gls{PI} controllers are widely used for the control operation of \gls{VSC}s in power systems. It is therefore relevant to translate from three-phase abc frame to a rotating \gls{dq} frame in order to have a two signal representation of three-phase \gls{AC} signals. Figure \ref{fig:DQTransformation} shows the Clarke-Park transformation used for this purpose. The three-phase measured signals from the node are translated to a stationary reference frame ($\alpha \beta$) using the Clarke transform. It is then translated to a synchronous rotating \gls{dq} frame using the Park transform. The reference signal for control is provided to the corresponding frame, and after the control process is established, it is translated back to the three-phase signals. In the real scenario, during translation to a rotating \gls{dq} frame, the d-axis is made to align with the voltage of the grid and q-axis is aligned to zero. This is done by the voltage angle determined by the Phase Locked Loop (\gls{PLL}). Such an approach provides control of active power or \gls{DC} voltage using d-axis current component of the converter, while the reactive power or \gls{AC} voltage can be controlled using the q-axis current component of the converter.   
 
 \begin{figure}[H]
 \centering
