--- a/4.Large_scale.tex
+++ b/4.Large_scale.tex
@@ -81,7 +81,7 @@ The components in the 2 GW, 66 kV \gls{HVAC} network is detailed in this section
         \item High Pass filter (\gls{HPF}) with series reactor
         \item \gls{OWF} transformer
     \end{itemize}
-    \item Four \gls{HVAC} cables  
+    \item Four pairs of \gls{HVAC} cables  
     \item Three interface transformers
     \item Two \gls{MMC}s
     \item Two pairs of \gls{HVDC} cables
