--- a/Appendix-b.tex
+++ b/Appendix-b.tex
@@ -47,4 +47,4 @@
     \label{DC_Voltage_PFD}
 \end{figure}
 
-During the time of fault, the \gls{DC} link voltage increases as seen in the Figures \ref{DC_Voltage_RSCAD} and \ref{DC_Voltage_PFD}. The chopper gets activated when the voltage goes above 1.05 p.u. in both the models. However, switching of the chopper depends on the time delay of the signal given to the triangular wave repeater in the RSCAD model. Whereas, the hysteresis block in the PowerFactory model shown in Figure \ref{fig:DC_bus_PFD} determines the activation of the chopper. 
+During the time of fault, the \gls{DC} link voltage increases as seen in the Figures \ref{DC_Voltage_RSCAD} and \ref{DC_Voltage_PFD}. The chopper gets activated when the voltage goes above 1.05 p.u. in both the models. However, switching of the chopper depends on the time delay of the signal given to the triangular wave repeater in the RSCAD model. Whereas, the hysteresis block shown in Figure \ref{fig:DC_bus_PFD} determines the activation of the chopper in the PowerFactory model. 
