--- a/report.tex
+++ b/report.tex
@@ -162,9 +162,9 @@
 \input{1.Introduction}
  \input{2.Scientific_Background}
  \input{3.Implementation_of_DVC}
- \input{4.Large_scale}
- \input{5.Operation_of_2GW}
-\input{6.Conclusions_and_future_scope}
+% \input{4.Large_scale}
+% \input{5.Operation_of_2GW}
+%\input{6.Conclusions_and_future_scope}
 
 \begin{appendices}
  \input{Appendix-a}
